# duckdb-lm-diskann

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json  extension_config.cmake  make_linux_aarch64.sh  vcpkg.json
.cursor/rules/: architecture-cpp20-modules-plan.mdc  code-organization.mdc  cpp-project-guidelines.mdc
.github/workflows/: MainDistributionPipeline.yml  _extension_distribution.yml
docs/: 2025-05-04 diskann progress.md  2025-05-05 Diskann Index filtering considerations.md  2025-05-05 Diskann progress.md  2025-05-06.Diskann graph build algorithm.md  2025-05-06.Duckdb useful api for diskann.md  2025-05-06.Plan - Diskann shadow design mitigations.md  2025-05-06.Plan - Diskann shadow design proposal.md  README.md  Understanding and Implementing LM-DiskANN for Billion-Scale Vector Search.md  diskann plan.md  vss extension info.md
docs/design/: 2025-05-09 01-Duckdb LM-Diskann v3.md
docs/plan/: 2025-05-06 01-Diskann shadow design 1 proposal.md  2025-05-06 04-Diskann algorithm mitigations.md  2025-05-06 05-Shadow Implementation.md  2025-05-06 06-Code Organization beta4.md  2025-05-06 06-Code Organization.md  2025-05-06 Diskann graph algorithm and duckdb.md  2025-05-06 Diskann shadow design mitigations.md  2025-05-07 01-Code Refactoring plan based on new organization beta4.md  2025-05-07 01-Code Refactoring plan based on new organization.md  2025-05-08 01-Consolidated Diskann Proposal Preview.md  2025-05-08 01-Consolidated Diskann Proposal v1.md  2025-05-11 01-Duckdb LM-Diskann v1.md  2025-05-11 01-Duckdb LM-Diskann v3.md  2025-05-11 01-Duckdb LM-Diskann.md
docs/ref/: 2025-05-05 Diskann Index filtering considerations.md  2025-05-06 01-Diskann shadow design beta1 proposal.md  2025-05-06 02-Diskann shadow design beta2 mitigations.md  2025-05-06 03-Diskann basic graph build algorithm.md  2025-05-06 04-Diskann graph algorithm and duckdb beta2.md  2025-05-06 05-Diskann algorithm mitigations beta3.md  2025-05-06 05-Diskann algorithm mitigations.md  2025-05-06 06-Shadow Implementation beta3.md  2025-05-06 06-Shadow Implementation.md  2025-05-06 Diskann basic graph build algorithm.md  2025-05-06 Useful duckdb api for diskann.md  2025-05-08 01-Consolidated Diskann Proposal beta4.md  2025-05-08 01-SMID instructions for diskann beta4.md  2025-05-08 01-SMID instructions for diskann.md  2025-05-09 02-Sweeping and Healing LM-DiskANN’s Disk-Based Graph in DuckDB beta4.md  2025-05-09 02-Sweeping and Healing LM-DiskANN’s Disk-Based Graph in DuckDB.md
docs/updates/: 2025-05-04 diskann progress.md  2025-05-04.diskann art index map.md  2025-05-05.Issues with duckdb index memory handling.md  2025-05-05.zDiskann progress.md  2025-05-06.Disannk progress.md
libsql/: lm_diskann.cpp  lm_diskann.hpp  vectordiskann.c
scripts/: Dockerfile.local_linux_aarch64
src/: lm_diskann_extension.cpp
src/diskann/: lm_diskann.hpp
src/hnsw/: hnsw_index_macros.cpp
src/include/: lm_diskann_extension.hpp
src/include/usearch/: duckdb_usearch.hpp  index.hpp  index_dense.hpp
src/libsql/: vectorIndexInt.h
src/lm_diskann/: CMakeLists.txt  GraphManager.cpp  GraphManager.hpp  GraphOperations.cpp  GraphOperations.hpp  LmDiskannIndex.cpp  LmDiskannIndex.hpp  LmDiskannNodeAccessors.cpp  LmDiskannNodeAccessors.hpp  LmDiskannScanState.hpp  NodeAccessors.cpp  NodeAccessors.hpp  NodeManager.cpp  NodeManager.hpp  Searcher.cpp  StorageManager.hpp  config.cpp  config.hpp  definitions.hpp  distance.cpp  distance.hpp  index_config.cpp  index_config.hpp  lm_diskann_index.cpp  lm_diskann_index.hpp  node.cpp  node.hpp  search.cpp  search.hpp  state.hpp  storage.cpp  storage.hpp  storage_manager.cpp  storage_manager.hpp  ternary_quantization.hpp
src/lm_diskann/common/: ann.hpp  duckdb_types.hpp  types.hpp
src/lm_diskann/core/: Coordinator.cpp  Coordinator.hpp  GraphManager.cpp  GraphManager.hpp  GraphNode.cpp  GraphNode.hpp  GraphOperations.cpp  GraphOperations.hpp  IGraphManager.hpp  ISearcher.hpp  IStorageManager.hpp  Orchestrator.cpp  Orchestrator.cppm  Orchestrator.hpp  Searcher.cpp  Searcher.hpp  StorageManager.cpp  StorageManager.hpp  distance.cpp  distance.hpp  index_config.cpp  index_config.hpp  ternary_quantization.hpp  ternary_quantization.new.hpp
src/lm_diskann/db/: LmDiskannIndex.cpp  LmDiskannIndex.hpp  LmDiskannScanState.cpp  LmDiskannScanState.hpp
src/lm_diskann/duckdb/: LmDiskannIndex.cpp  LmDiskannIndex.hpp  LmDiskannScanState.hpp
src/lm_diskann/quantization/: ternary_quantization.cpp
src/lm_diskann/scheduler/: custom_pool_queue.cpp  custom_pool_queue.hpp  custom_pool_worker.cpp  custom_pool_worker.hpp  diskann_task_pool.cpp  diskann_task_pool.hpp  duckdb_proxies.hpp  executor_task.cpp  executor_task.hpp  extension_integration.cpp  task_dispatcher.cpp  task_dispatcher.hpp  task_types.hpp
src/lm_diskann/store/: IFileSystemService.hpp  IPrimaryStorageService.hpp  IShadowStorageService.hpp
test/nodejs/: vss_test.js
test/python/: vss_test.py
test/sql/: basic.sql.test
test/sql/hnsw/: hnsw_basic.test  hnsw_crud.test  hnsw_experimental_persistence.test  hnsw_insert.test  hnsw_insert_wal.test  hnsw_join_macro.test  hnsw_lateral_join.test  hnsw_lateral_join_group.test  hnsw_metrics.test  hnsw_options.test  hnsw_projection.test  hnsw_result.test  hnsw_rewrite.test  hnsw_topk.test
test/sql/slow/: hnsw_lateral_join_group_large.test  hnsw_reclaim_storage.test_slow
